--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gentlemonster</title>
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <title>GENTLEMONSTER</title>
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/common.css">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    
+    <header>
+        <h1><a href="#"><img src="./images/logo.png" alt="GENTLEMONSTER"></a></h1>
+        <div class="right">
+            <a href="" class="lang">Shop in KR</a>
+            <form action="#" method="get" id="searchFrm">
+                <fieldset>
+                    <legend class="skip">검색양식</legend>
+                    <input type="text" placeholder="상품을 입력해 주세요" id="txt">
+                    <button type="submit" id="searchBtn"><img src="./images/icon_search.png" alt=""></button>
+                </fieldset>
+            </form>
+            <a href="#" id="login"><img src="./images/icon_login.png" alt="로그인"></a>
+            <a href="#" id="cart"><img src="./images/icon_cart.png" alt="장바구니"></a>
+            <a href="#" id="nav"><img src="./images/icon_menu.png" alt="메뉴열기"></a>
+        </div>
+    </header>
 </body>
 </html>
