--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <form action="#" method="get" id="searchFrm">
                 <fieldset>
                     <legend class="skip">검색양식</legend>
-                    <input type="text" placeholder="상품을 입력해 주세요" id="txt">
+                    <input type="text" placeholder="상품을 입력해 주세요" id="searchTxt">
                     <button type="submit" id="searchBtn"><img src="./images/icon_search.png" alt=""></button>
                 </fieldset>
             </form>
