젠틀몬스터_헤더작업

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <h1><a href="#"><img src="./images/logo.png" alt="GENTLEMONSTER"></a></h1>
         <div class="right">
-            <a href="" class="lang">Shop in KR</a>
+            <a href="#" class="lang">Shop in KR</a>
             <form action="#" method="get" id="searchFrm">
                 <fieldset>
                     <legend class="skip">검색양식</legend>
@@ -65,5 +65,7 @@
             </nav>
         </div>
     </header>
+    <!-- header, footer 웹페이지 공통영역 적용JS -->
+    <script src="./script/common.js"></script>
 </body>
 </html>
