--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <button type="submit" id="searchBtn"><img src="./images/icon_search.png" alt=""></button>
                 </fieldset>
             </form>
-            <a href="#" id="login"><img src="./images/icon_login.png" alt="로그인"></a>
+            <a href="./login.html" id="login"><img src="./images/icon_login.png" alt="로그인"></a>
             <a href="#" id="cart"><img src="./images/icon_cart.png" alt="장바구니"></a>
             <a href="#" id="nav"><img src="./images/icon_menu.png" alt="메뉴열기"></a>
         </div>
