--- a/login.html
+++ b/login.html
@@ -6,12 +6,16 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <title>LOGIN | GENTLEMONSTER</title>
+    <!-- swiper slide -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/login.css">
 </head>
 <body>
     <!-- header -->
+    <?php include('./header.php') ?>
     <main>
         <div class="login">
             <h1>로그인</h1>
@@ -42,8 +46,8 @@
             </form>      
         </div>
     </main>
-
     <!-- footer -->
+    <?php include('./footer.php') ?>
     <script>
         const id_box = document.querySelector('p .id')
         const pw_box = document.querySelector('p .pw')
@@ -61,5 +65,6 @@
             id_box.style.borderRadius = '0px'
         })
     </script>
+    <script src="./script/common.js"></script>
 </body>
 </html>
