--- a/product_list.html
+++ b/product_list.html
@@ -44,7 +44,7 @@
                     </div>
             </div>
             <div class="container">
-                <div class="item item1">
+                <div class="item">
                     <div class="box">
                         <a href="#" class="item_img"><img src="./images/glasses_img/g_model_05.jpg" alt=""></a>
                         <a href="#" class="like_img"><img src="./images/glasses_img/favorite.png" alt="관심상품등록"></a>
@@ -63,10 +63,10 @@
                         </p>
                     </div>
                 </div>
-                <div class="item item2">
+                <div class="item">
                     <div class="box">
-                        <a href="#"><img src="./images/glasses_img/glasses_02.jpg" alt=""></a>
-                        <a href="#"><img src="./images/glasses_img/favorite.png" alt="관심상품등록"></a>
+                        <a href="#" class="item_img"><img src="./images/glasses_img/glasses_02.jpg" alt=""></a>
+                        <a href="#" class="like_img"><img src="./images/glasses_img/favorite.png" alt="관심상품등록"></a>
                     </div>
                     <div class="txt">
                         <h2>Blue Light Protection</h2>
@@ -82,10 +82,10 @@
                         </p>
                     </div>
                 </div>
-                <div class="item item3">
+                <div class="item">
                     <div class="box">
-                        <a href="#"><img src="./images/glasses_img/g_model_02.jpg" alt=""></a>
-                        <a href="#"><img src="./images/glasses_img/favorite.png" alt="관심상품등록"></a>
+                        <a href="#" class="item_img"><img src="./images/glasses_img/g_model_02.jpg" alt=""></a>
+                        <a href="#" class="like_img"><img src="./images/glasses_img/favorite.png" alt="관심상품등록"></a>
                     </div>
                     <div class="txt">
                         <h2>Blue Light Protection</h2>
@@ -101,10 +101,10 @@
                         </p>
                     </div>
                 </div>
-                <div class="item item4">
+                <div class="item">
                     <div class="box">
-                        <a href="#"><img src="./images/glasses_img/glasses_07.jpg" alt=""></a>
-                        <a href="#"><img src="./images/glasses_img/favorite.png" alt="관심상품등록"></a>
+                        <a href="#" class="item_img"><img src="./images/glasses_img/glasses_07.jpg" alt=""></a>
+                        <a href="#" class="like_img"><img src="./images/glasses_img/favorite.png" alt="관심상품등록"></a>
                     </div>
                     <div class="txt">
                         <h2>Blue Light Protection</h2>
@@ -120,10 +120,10 @@
                         </p>
                     </div>
                 </div>
-                <div class="item item5">
+                <div class="item">
                     <div class="box">
-                        <a href="#"><img src="./images/glasses_img/g_model_06.jpg" alt=""></a>
-                        <a href="#"><img src="./images/glasses_img/favorite.png" alt="관심상품등록"></a>
+                        <a href="#" class="item_img"><img src="./images/glasses_img/g_model_06.jpg" alt=""></a>
+                        <a href="#" class="like_img"><img src="./images/glasses_img/favorite.png" alt="관심상품등록"></a>
                     </div>
                     <div class="txt">
                         <h2>Blue Light Protection</h2>
